Your commit message

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/ziply
+
 JWT_SECRET=your_jwt_secret_key_here
-CLIENT_URL=https://ziply-web-app-client.vercel.app
+
+CLIENT_URL=https://frontend-ziply.vercel.app/
 
 VITE_SOCKET_URL=https://bulk-d1qh.vercel.app/
 
@@ -12,3 +13,4 @@ CLOUDINARY_API_SECRET=P4H4hdI9afEXG9hm0xA0qcqKvzc
 VITE_API_URL=http://localhost:5000/api
 VITE_WS_URL=ws://localhost:5000
 
+MONGODB_URI=mongodb+srv://abhinavkumar002010:<db_password>@ziply.3b5aprv.mongodb.net/?retryWrites=true&w=majority&appName=ziply
