--- a/.env
+++ b/.env
@@ -13,4 +13,5 @@ CLOUDINARY_API_SECRET=P4H4hdI9afEXG9hm0xA0qcqKvzc
 VITE_API_URL=http://localhost:5000/api
 VITE_WS_URL=ws://localhost:5000
 
-MONGODB_URI=mongodb+srv://abhinavkumar002010:<db_password>@ziply.3b5aprv.mongodb.net/?retryWrites=true&w=majority&appName=ziply
+MONGODB_URI=mongodb+srv://abhinavkumar002010:12345@ziply.3b5aprv.mongodb.net/?retryWrites=true&w=majority&appName=ziply
+mongodb+srv://abhinavkumar002010:12345@ziply.3b5aprv.mongodb.net/?retryWrites=true&w=majority&appName=ziply
