Your commit message

--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ CLOUDINARY_CLOUD_NAME=donadssm4
 CLOUDINARY_API_KEY=894683177636316
 CLOUDINARY_API_SECRET=P4H4hdI9afEXG9hm0xA0qcqKvzc
 
-VITE_API_URL=http://localhost:5000/api
-VITE_WS_URL=ws://localhost:5000
+VITE_API_URL=https://backend-ziply.onrender.com/api
+VITE_WS_URL=wss://backend-ziply.onrender.com
 
 MONGODB_URI=mongodb+srv://abhinavkumar002010:12345@ziply.3b5aprv.mongodb.net/?retryWrites=true&w=majority&appName=ziply
 mongodb+srv://abhinavkumar002010:12345@ziply.3b5aprv.mongodb.net/?retryWrites=true&w=majority&appName=ziply
