--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ VITE_WS_URL=wss://backend-ziply.onrender.com
 
 MONGODB_URI=mongodb+srv://abhinavkumar002010:12345@ziply.3b5aprv.mongodb.net/?retryWrites=true&w=majority&appName=ziply
 mongodb+srv://abhinavkumar002010:12345@ziply.3b5aprv.mongodb.net/?retryWrites=true&w=majority&appName=ziply
+NODE_ENV=development
